@@ -305,8 +305,7 @@ finds SNMPv2-MIB::sysUpTime variable unavailable in the device.
 =item * C<snmp-max-msg-size>
 
 Optional. If defined, it sets the SNMP maximum message size different from
-default 1472 octets (true for UDP/IPv4, see Net::SNMP documentation for more
-information). 
+default. The default value is 65535 for SNMP versions 1 and 2c.
 
 =item * C<host-subtree>
 
